--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
-Package: wuyh
+Package: HighlyRegionalGenes
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.2.0
-Author: Who wrote it
+Title: Tools to identify features for downstream analysis.
+Version: 0.1.0
+Author: wyh
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: A toolkit to identify genes that are highly regionally distributed.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-
-
+RoxygenNote: 7.0.2
+Depends: Seurat
+Imports: 
+    wuyh (>= 0.1.0)
