--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
-Package: HighlyRegionalGenes
+Package: wuyh
 Type: Package
-Title: Tools to identify features for downstream analysis.
+Title: What the Package Does (Title Case)
 Version: 0.2.0
-Author: wyh
+Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: A toolkit to identify genes that are highly regionally distributed.
+Description: More about what it does (maybe more than one line)
+    Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Imports: 
+    HighlyRegionalGenes (>= 0.2.0)
 RoxygenNote: 7.0.2
+Remotes:  
+    JulieBaker1/HighlyRegionalGenes
